4.1 Regression: Cycles: Area lamp artifacts #120119

Closed
opened 2024-03-31 21:27:19 +02:00 by Carlos · 3 comments

System Information
Operating system: Linux-6.1.77-2-MANJARO-x86_64-with-glibc2.39 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.06

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-29 00:22, hash: af7a34dee7d4
Worked: 4.0

Short description of error
It just happens in Cycles
Using area lamps, whether square or disck, produces a reflection with an edge on the object
Things that eliminate it:
Lamp
-use a size smaller than .47 or greater than 1.51 m
Material
-disconect or reduce the strenght of the normal map
- reduce the emission less than .5 or remove it
-change emission sampling to none
Cycles
-uncheck light tree.

imagen
imagen

Exact steps for others to reproduce the error
I couldn't reproduce it in a fresh new file with other objets, it only happens to this object whether I copy it or append it to a new file.

Thank you

**System Information** Operating system: Linux-6.1.77-2-MANJARO-x86_64-with-glibc2.39 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.06 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-29 00:22, hash: `af7a34dee7d4` Worked: 4.0 **Short description of error** It just happens in Cycles Using area lamps, whether square or disck, produces a reflection with an edge on the object Things that eliminate it: Lamp -use a size smaller than .47 or greater than 1.51 m Material -disconect or reduce the strenght of the normal map - reduce the emission less than .5 or remove it -change emission sampling to none Cycles -uncheck light tree. ![imagen](/attachments/577dd2b8-6c85-42e9-a67e-8063224fd9d1) ![imagen](/attachments/c79e6064-08e1-479a-9c17-d91c58fe6171) **Exact steps for others to reproduce the error** I couldn't reproduce it in a fresh new file with other objets, it only happens to this object whether I copy it or append it to a new file. Thank you
Carlos added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-31 21:27:20 +02:00
Member

I can confirm this issue.

It occurs because the forward and NEE parts of the light rendering deviate from each other. Here's images showing the issue:

Forward only, but still applying MIS weighting NEE Only, but still applying MIS weighting
Forward Only.png NEE Only.png

The fact they're different brightnesses, and have patches on them, is expected. The issue is that the patches aren't the same shape, and the artifacts occur wherever the patches don't align.

I'll run a quick bisect to see which commit triggered this issue.

Marking as high as this is a regression in 4.1

I can confirm this issue. It occurs because the forward and NEE parts of the light rendering deviate from each other. Here's images showing the issue: |Forward only, but still applying MIS weighting|NEE Only, but still applying MIS weighting| |-|-| |![Forward Only.png](/attachments/7f35aced-5d4e-4794-896d-19e7c3ea0cdb)|![NEE Only.png](/attachments/beab873c-f44e-4c28-95fa-b155ddf17b11)| The fact they're different brightnesses, and have patches on them, is expected. The issue is that the patches aren't the same shape, and the artifacts occur wherever the patches don't align. I'll run a quick bisect to see which commit triggered this issue. Marking as high as this is a regression in 4.1
Alaska added
Status
Confirmed
Module
Render & Cycles
Priority
High
and removed
Status
Needs Triage
Priority
Normal
labels 2024-04-01 02:09:26 +02:00
Alaska changed title from Cycles: Area lamp artifacts to 4.1 Regression: Cycles: Area lamp artifacts 2024-04-01 02:09:55 +02:00
Member

Bisecting points to 36e603c430 being the culprit commit. Specifically this change in intern/cycles/kernel/integrator/shade_surface.h:

-    INTEGRATOR_STATE_WRITE(state, path, mis_origin_n) = sd->N;
+    INTEGRATOR_STATE_WRITE(state, path, mis_origin_n) = sc->N;

Reverting that change fixes the issue. This code change also explains why this issue is only present when using a normal map.

CC @Sergey can you take a look into this? I'm not sure why you made the change to sc->N and I'm not sure if reverting back to sd->N has a negative impact on the feature you implemented with that commit.

Bisecting points to 36e603c430ca90a4a19574a5071db54a7cebcb39 being the culprit commit. Specifically this change in `intern/cycles/kernel/integrator/shade_surface.h`: ``` - INTEGRATOR_STATE_WRITE(state, path, mis_origin_n) = sd->N; + INTEGRATOR_STATE_WRITE(state, path, mis_origin_n) = sc->N; ``` Reverting that change fixes the issue. This code change also explains why this issue is only present when using a normal map. CC @Sergey can you take a look into this? I'm not sure why you made the change to `sc->N` and I'm not sure if reverting back to `sd->N` has a negative impact on the feature you implemented with that commit.

@Alaska Unfortunately, I do not quickly recall details, so would need to dig into the code again to get exact details. The vague idea i recall is that we wanted to make it so if an artist plugs normal to a shader it is used as-is.

On a quick note I can only confirm that reverting back to sd->N does indeed have an affect on the feature. I've attached a simplified .blend file which uses this functionality. If the code is rolled back to sd->N and you render the file, you will see "fireflies" in the shadow areas of the rock.

@Alaska Unfortunately, I do not quickly recall details, so would need to dig into the code again to get exact details. The vague idea i recall is that we wanted to make it so if an artist plugs normal to a shader it is used as-is. On a quick note I can only confirm that reverting back to `sd->N` does indeed have an affect on the feature. I've attached a simplified .blend file which uses this functionality. If the code is rolled back to `sd->N` and you render the file, you will see "fireflies" in the shadow areas of the rock.
Sergey Sharybin self-assigned this 2024-04-03 13:50:24 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-05 10:11:49 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120119
No description provided.