intern/cycles/kernel/closure/bsdf.h
@@ -60,7 +60,10 @@ ccl_device_inline float bsdf_get_roughness_pass_squared(ccl_private const Shader
 /* An additional term to smooth illumination on grazing angles when using bump mapping.
  * Based on "Taming the Shadow Terminator" by Matt Jen-Yuan Chiang,
  * Yining Karl Li and Brent Burley. */
-ccl_device_inline float bump_shadowing_term(float3 Ng, float3 N, float3 I)
+ccl_device_inline float bump_shadowing_term(ccl_private const ShaderData &sd,
+                                            float3 Ng,
+                                            float3 N,
+                                            float3 I)
 {
   const float cosNI = dot(N, I);
   if (cosNI < 0.0f) {
@@ -76,6 +79,11 @@ ccl_device_inline float bump_shadowing_term(float3 Ng, float3 N, float3 I)
   /* If the incoming light points away from the surface, return black. */
   if (g < 0.0f) {
     return 0.0f;
+  }
+
+  /* When bump map correction is not used do skip the smoothing. */
+  if ((sd.flag & SD_USE_BUMP_MAP_CORRECTION) == 0) {
+    return 1.0f;
   }
 
   /* Return smoothed value to avoid discontinuity at perpendicular angle. */
@@ -235,8 +243,8 @@ ccl_device_inline int bsdf_sample(KernelGlobals kg,
       *eval *= shift_cos_in(cosNO, frequency_multiplier);
     }
     if (label & LABEL_DIFFUSE) {
-      if ((sd->flag & SD_USE_BUMP_MAP_CORRECTION) && !isequal(sc->N, sd->N)) {
-        *eval *= bump_shadowing_term(sd->N, sc->N, *wo);
+      if (!isequal(sc->N, sd->N)) {
+        *eval *= bump_shadowing_term(*sd, sd->N, sc->N, *wo);
       }
     }
   }
@@ -531,8 +539,8 @@ ccl_device_inline
   }
 
   if (CLOSURE_IS_BSDF_DIFFUSE(sc->type)) {
-    if ((sd->flag & SD_USE_BUMP_MAP_CORRECTION) && !isequal(sc->N, sd->N)) {
-      eval *= bump_shadowing_term(sd->N, sc->N, wo);
+    if (!isequal(sc->N, sd->N)) {
+      eval *= bump_shadowing_term(*sd, sd->N, sc->N, wo);
     }
   }
 
